# BitbucketToolCpp

./: CMakeLists.txt  MyApp.cpp  MyApp.h  MyDialog.cpp  MyDialog.h  StatusItem.cpp  StatusItem.h  info.plist  stdafx.h
images/: resources.xrc
macos/: AppIcon.icns  info.plist  macos_activation.mm  wxwidgets.patch
preferences/: MyDialog.cpp  MyDialog.h  PreferencesWindow.cpp  PreferencesWindow.h
preferences/wizard/: LoginPage.cpp  LoginPage.h  RepositoryPage.cpp  RepositoryPage.h  SetupWizard.cpp  SetupWizard.h  WorkspacePage.cpp  WorkspacePage.h
swift/: file.h  file.swift
windows/: app.manifest  app.rc
